Anonymous | Login | 2021-01-18 07:30 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] | [ Issue History ] [ Print ] | ||||||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||||||
0026269 | Open CASCADE | [OCCT] OCCT:Modeling Algorithms | public | 2015-05-26 13:53 | 2017-07-24 09:25 | ||||||||
Reporter | aml | ||||||||||||
Assigned To | aml | ||||||||||||
Priority | low | Severity | tweak | ||||||||||
Status | assigned | Resolution | open | ||||||||||
Platform | OS | OS Version | |||||||||||
Product Version | [OCCT] 6.9.0 | ||||||||||||
Target Version | [OCCT] Unscheduled | Fixed in Version | |||||||||||
Summary | 0026269: Extrema package revision | ||||||||||||
Description | There are several problems with extrema package and its API: 1) Inconsistent handling of extrema results in "extrema" and "2dextrema" commands. In "extrema" command flag "myIsPar" is used, in "2dextrema" it is not used. 2) Analytical extrema does not take into account trimmed input data. (case 1, case 2) 3) In GeomAPI "myIsPar" is used incorrectly or not used at all. I I propose to change "myIsPar" to "myIsInfSol", which will cover situation with infinity solutions, not only parallel case. Change API and DRAW commands to work with this new variable. II Fix analytical extrema to work with trimmed data. | ||||||||||||
Steps To Reproduce | #case 1 line l1 0 0 0 1 0 0 line l2 2 0 0 1 0 0 trim l1 l1 0 1 trim l2 l2 0 1 extrema l1 l2 #case 2 circle c1 0 0 0 10 circle c2 0 0 0 5 trim c1 c1 0 1 trim c2 c2 3 4 extrema c1 c2 | ||||||||||||
Tags | No tags attached. | ||||||||||||
Test case number | |||||||||||||
Attached Files | |||||||||||||
![]() |
|||||||||||||||||||||||||||||||||||||
|
![]() |
|
(0042531) aml (developer) 2015-06-29 12:11 edited on: 2015-06-29 12:12 |
ExtremaPC: I 1) bad format of output: proj c 3.0 3.0 2.0 parameter 1 = 1.1738953633378706 ext_1 parameter 2 = 2.1611867552406454 ext_2 parameter 3 = 3.5000000059308389 ext_3 parameter 4 = 5.0399884503606023 ext_4 parameter 5 = 5.4804063007678074 ext_5 parameter 6 = 6.2485611263687888 ext_6 parameter 7 = 6.7381612209715556 ext_7 parameter 8 = 1.1738953633378706 ext_8 2) French comments: proj c 3.999999652077201 5.0000000062915735 5.00002142991819367 parameter 1 = 0.99910795389207607 ext_1 Le point est sur la courbe. Son parametre est U = 0.99910795389207607 II There is no duplicates handling. |
(0042533) msv (developer) 2015-06-29 12:18 |
Andrey, please validate this bug fix. |
(0042535) abv (manager) 2015-06-29 12:40 |
I deem the proposed changes are quite reasonable, let's proceed (with low priority) |
![]() |
|||
Date Modified | Username | Field | Change |
2015-05-26 13:53 | aml | New Issue | |
2015-05-26 13:53 | aml | Assigned To | => msv |
2015-05-26 13:54 | aml | Relationship added | related to 0026184 |
2015-05-26 13:54 | aml | Relationship added | related to 0026063 |
2015-05-26 13:55 | aml | Relationship added | related to 0026075 |
2015-05-26 13:56 | aml | Description Updated | View Revisions |
2015-05-26 15:02 | msv | Description Updated | View Revisions |
2015-06-29 12:09 | aml | Relationship added | related to 0026351 |
2015-06-29 12:11 | aml | Note Added: 0042531 | |
2015-06-29 12:12 | aml | Note Edited: 0042531 | View Revisions |
2015-06-29 12:18 | msv | Note Added: 0042533 | |
2015-06-29 12:18 | msv | Assigned To | msv => abv |
2015-06-29 12:18 | msv | Severity | minor => tweak |
2015-06-29 12:40 | abv | Note Added: 0042535 | |
2015-06-29 12:40 | abv | Assigned To | abv => aml |
2015-06-29 12:40 | abv | Priority | normal => low |
2015-06-29 12:40 | abv | Status | new => assigned |
2016-02-16 14:02 | aml | Relationship added | parent of 0027162 |
2016-07-07 07:04 | aml | Relationship added | related to 0022560 |
2016-07-07 07:04 | aml | Relationship added | related to 0022525 |
2016-10-28 16:32 | msv | Target Version | 7.1.0 => 7.2.0 |
2017-07-24 09:25 | msv | Target Version | 7.2.0 => Unscheduled |
Copyright © 2000 - 2021 MantisBT Team |